tests/paczka1/fuzzy1/37423920.err
Error in line 1: av6yl7GlPn S299 38,65
Error in line 3: av6yl7GlPn S299 111,6
Error in line 6: exZtM5JD6ip A918 50,82
Error in line 7: wnM3q A918 10,6
Error in line 11: av6yl7GlPn S91^ 76,4
Error in line 15: A844 S299 5,7
Error in line 23: HvJ1Ypor4bz A844 73,2
Error in line 26: av6yl7GlPn S299 83,7
Error in line 36: wnM3q A918 5,7
